--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
 						I have been doing research with the wonderful <a href="https://www.cis.upenn.edu/~myatskar/">Prof. Mark Yatskar</a>.
 						Along with which I have also been lucky to be working with
 						<a class="" href="https://ranjaykrishna.com/index.html">Prof. Ranjay Krishna</a> at University of Washington 
-						and his cohort on various research projects.
+						and his cohort on various research projects. I did my B.Tech in Computer Science from V.J.T.I. during which I got the 
+						opportunity to remotely work with <a class="" href="https://ranjaykrishna.com/index.html">Prof. Ranjay Krishna</a> and 
+						<a class="" href="http://graphics.stanford.edu/~maneesh/">Prof. Maneesh Agrawala</a> at Stanford University.
 					</p>
 				</div>
 			</div>
@@ -128,7 +130,7 @@
 	<section class="mx-5 my-5" id="project">
 		<h3 class="mx-5">Projects</h3>
 		<div class="row mx-5">
-			<div class="col-4">
+			<div class="col-4" style="padding-bottom: 30px;">
 				<div class="card mt-3 h-100">
 					<div class="card-body pb-0">
 						<h5 class="card-title">Could this be any better?</h5>
@@ -151,7 +153,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-4">
+			<div class="col-4" style="padding-bottom: 30px;">
 				<div class="card mt-3 h-100">
 					<div class="card-body pb-0">
 						<h5 class="card-title">&#9888; Alert!! False News! &#9888;</h5>
@@ -168,7 +170,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-4">
+			<div class="col-4" style="padding-bottom: 30px;">
 				<div class="card mt-3 h-100">
 					<div class="card-body pb-0">
 						<h5 class="card-title">AlgoVisualizer</h5>
@@ -184,6 +186,43 @@
 						<a href="asset/pdf/AlgoVisualizer.pdf"
 							class="card-link">[Report]</a>
 						<a href="https://github.com/monaGandhi09/AlgoVisualizer"
+							class="card-link">[GitHub]</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-4" style="padding-bottom: 30px;">
+				<div class="card mt-3 h-100">
+					<div class="card-body pb-0">
+						<h5 class="card-title">Hostelite &#8962;</h5>
+						<h6 class="card-subtitle mb-2 text-muted">Hostel Management System [Spring 2022]</h6>
+						<p class="card-text"><i>Technologies: </i>Flask, HTML, CSS, JS</p>
+						<p class="card-text">
+							Managing information about students, staff, admission process for a Hostel is tedious. We created 
+							a website which does not not require the person handling the system to be very efficient or to be good at calculations. 
+							It greatly eases the work of efficiently managing the hostel. Some key features are managing data of students, staff, students' representative, 
+							admission process, mess and also helps in maintaining exit-entry records of students who stay in the hostel, visitors and couriers delivered to them.
+						</p>
+						<a href="https://github.com/monaGandhi09/HosteLite"
+							class="card-link">[GitHub]</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-4" style="padding-bottom: 30px;">
+				<div class="card mt-3 h-100">
+					<div class="card-body pb-0">
+						<h5 class="card-title">Improving Network Intrusion Detection System using Imbalance Reduction Techniques</h5>
+						<h6 class="card-subtitle mb-2 text-muted">Senior Year Project [Fall 2021 - Spring 2022]</h6>
+						<p class="card-text"><i>Domain: </i>Network Security, Machine Learning</p>
+						<p class="card-text">
+							Given the huge amount of traffic on a network detecting malicious activities using machine learning becomes
+							difficult as it can hide easily in normal traffic. We create an ensemble of various imbalance reduction techniques, 
+							while comparing them against each other. We infer that Depending upon the combination of techniques used for the ensemble, the results have varied. 
+							Ensembles of certain techniques did prove to show better results.
+						</p>
+						<a href="https://docs.google.com/presentation/d/1bfREdJ4BEEDlcBR4V101dSBHfUNFtkYQiPNiIVEFuHw/edit?usp=sharing"
+							class="card-link">[Slides]</a>
+						<a href="https://github.com/monaGandhi09/FYP/blob/main/Stage_2_FYP_Report.pdf" class="card-link">[Report]</a>
+						<a href="https://github.com/monaGandhi09/FYP"
 							class="card-link">[GitHub]</a>
 					</div>
 				</div>
