--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<span class="icon"><a class="text-dark"
 							href="https://twitter.com/monagandhi09"><i class="fab fa-1x fa-twitter mx-2"></i></a></span>
 					</div>
-					<p>I am a Masters student majoring in Computer Science at Unoversity of Pennsylvania, where 
+					<p>I am a Masters student majoring in Computer Science at University of Pennsylvania, where 
 						I have been doing research with the wonderful <a href="https://www.cis.upenn.edu/~myatskar/">Prof. Mark Yatskar</a>.
 						Along with which I have also been lucky to be working with
 						<a class="" href="https://ranjaykrishna.com/index.html">Prof. Ranjay Krishna</a> at University of Washington 
