--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
 			</div>
 			<div class="row pt-5">
 				My current research interests lie at the intersection of vision and language, which have been the focus of my past research
-				experiences. I am specifically keen on studying interpretability of large models which is the focus of my recent research with Prof. Mark Yatskar
-				and also with Prof. Ranjay Krishna.
+				experiences. I am specifically keen on studying interpretability of large models which is the focus of my recent research with Prof. Mark Yatskar.
 			</div>
 			<!-- <div class="row pt-5">
 					<p> My past projects cover multi-agent coordination, large language and vision models, and human-computer interaction.
@@ -133,6 +132,29 @@
 			<div class="col-4" style="padding-bottom: 30px;">
 				<div class="card mt-3 h-100">
 					<div class="card-body pb-0">
+						<h5 class="card-title">Live Poets Society</h5>
+						<h6 class="card-subtitle mb-2 text-muted">Goodreads clone [Spring 2022]</h6>
+						<p class="card-text"><i>Technologies: </i>ReactJS, MySQL</p>
+						<p class="card-text">
+							We have created a social cataloging application specifically for poetry lovers. Our aim
+							was to make a platform that enables users to explore the world of poetry through an extensive collection of
+							books, series, authors, and reviews. 
+							By signing in, users can create and maintain their own virtual library of poetry books, rate them, and receive custom
+							recommendations based on their past behaviour about new poetry books that they might enjoy.
+							In addition to these features, the application also seeks to encourage community engagement. 
+						</p>
+						<a href="asset/pdf/LivePoetsSocietyReport.pdf" target="_blank"
+							class="card-link">[Report]</a>
+							<a href="asset/image/LivePoetsSocietyDemo.mp4" target="_blank"
+							class="card-link">[Video]</a>
+						<a href="https://github.com/monaGandhi09/Live-Poets-Society" target="_blank"
+							class="card-link">[GitHub]</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-4" style="padding-bottom: 30px;">
+				<div class="card mt-3 h-100">
+					<div class="card-body pb-0">
 						<h5 class="card-title">Could this be any better?</h5>
 						<h6 class="card-subtitle mb-2 text-muted">Multi-modal Sarcasm Detector [Fall 2022]</h6>
 						<p class="card-text"><i>Domain: </i>Computer Vision and Natural Language Processing</p>
@@ -142,11 +164,11 @@
 							Training and analyzing the performance of LSTMs with different types of attention mechanisms, we found 
 							the best performing model to learn a bias towards labeling data as sarcastic, but does very well in detecting non-sarcastic data.
 						</p>
-						<a href="asset/pdf/SarcasmDetector.pdf"
+						<a href="asset/pdf/SarcasmDetector.pdf" target="_blank"
 							class="card-link">[Report]</a>
-						<a href="asset/pdf/SarcasmDetectorPresentation.pdf"
+						<a href="asset/pdf/SarcasmDetectorPresentation.pdf" target="_blank"
 							class="card-link">[Presentation]</a>
-							<a href="asset/image/SarcasmDetector.mp4"
+							<a href="asset/image/SarcasmDetector.mp4" target="_blank"
 							class="card-link">[Video]</a>
 						<!-- <a href=""
 							class="card-link">[GitHub]</a> -->
@@ -163,9 +185,9 @@
 							We developed a Fake-News Detector using Transformer-based model - BERT trained on LIAR dataset. On analysis,
 							we infer that  the model does well classifying false statements, and does a poor job classifying true statements.
 						</p>
-						<a href="asset/pdf/FakeNews.pdf"
+						<a href="asset/pdf/FakeNews.pdf" target="_blank"
 							class="card-link">[Report]</a>
-						<a href="https://github.com/monaGandhi09/ML-Project"
+						<a href="https://github.com/monaGandhi09/ML-Project" target="_blank"
 							class="card-link">[GitHub]</a>
 					</div>
 				</div>
@@ -183,9 +205,9 @@
 							path finding algorithms like BFS, DFS, Dijkstra's visit where one can add weights and walls in the grid. 
 							Making comparing various algorithms against each other easier. 
 						</p>
-						<a href="asset/pdf/AlgoVisualizer.pdf"
+						<a href="asset/pdf/AlgoVisualizer.pdf" target="_blank"
 							class="card-link">[Report]</a>
-						<a href="https://github.com/monaGandhi09/AlgoVisualizer"
+						<a href="https://github.com/monaGandhi09/AlgoVisualizer" target="_blank"
 							class="card-link">[GitHub]</a>
 					</div>
 				</div>
@@ -202,7 +224,7 @@
 							It greatly eases the work of efficiently managing the hostel. Some key features are managing data of students, staff, students' representative, 
 							admission process, mess and also helps in maintaining exit-entry records of students who stay in the hostel, visitors and couriers delivered to them.
 						</p>
-						<a href="https://github.com/monaGandhi09/HosteLite"
+						<a href="https://github.com/monaGandhi09/HosteLite" target="_blank"
 							class="card-link">[GitHub]</a>
 					</div>
 				</div>
@@ -219,9 +241,9 @@
 							while comparing them against each other. We infer that Depending upon the combination of techniques used for the ensemble, the results have varied. 
 							Ensembles of certain techniques did prove to show better results.
 						</p>
-						<a href="https://docs.google.com/presentation/d/1bfREdJ4BEEDlcBR4V101dSBHfUNFtkYQiPNiIVEFuHw/edit?usp=sharing"
+						<a href="https://docs.google.com/presentation/d/1bfREdJ4BEEDlcBR4V101dSBHfUNFtkYQiPNiIVEFuHw/edit?usp=sharing" target="_blank"
 							class="card-link">[Slides]</a>
-						<a href="https://github.com/monaGandhi09/FYP/blob/main/Stage_2_FYP_Report.pdf" class="card-link">[Report]</a>
+						<a href="https://github.com/monaGandhi09/FYP/blob/main/Stage_2_FYP_Report.pdf" target="_blank" class="card-link">[Report]</a>
 						<a href="https://github.com/monaGandhi09/FYP"
 							class="card-link">[GitHub]</a>
 					</div>
