--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				<b>[Aug, 2024] </b> Our paper <i>A Textbook Remedy for Domain Shifts: Knowledge Priors for Medical Image Analysis</i> has been accepted to NeurIPS 2024. 
 			</li>
 			<li class="bg-light">
-				<b>[May, 2024] </b> Awarded the <i>Best Teaching Award</i> at 
+				<b>[May, 2024] </b> Awarded the <i>Best Teaching Award</i> at UPenn.
 			</li>
 			<li class="bg-light">
 				<b>[April, 2024] </b> Decided to go to <b>Ohio State University</b> for my PhD!
