--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
 				<b>[Aug, 2024] </b> Our paper <i>A Textbook Remedy for Domain Shifts: Knowledge Priors for Medical Image Analysis</i> has been accepted to NeurIPS 2024. 
 			</li>
 			<li class="bg-light">
+				<b>[May, 2024] </b> Graduated with a Masters Degree from UPenn.
+			</li>
+			<li class="bg-light">
 				<b>[May, 2024] </b> Awarded the <i>Best Teaching Award</i> at UPenn.
 			</li>
 			<li class="bg-light">
