--- a/index.html
+++ b/index.html
@@ -188,6 +188,8 @@
 						</p>
 						<a href="asset/pdf/CIS_7000_Project_1.pdf" target="_blank"
 							class="card-link">[Report]</a>
+						<a href="asset/pdf/CIS 7000 Project 1 Final Presentation.pdf" target="_blank"
+							class="card-link">[Presentation]</a>
 						<a href="https://arxiv.org/abs/2309.12288" target="_blank"
 							class="card-link">[Original Paper]</a>
 					</div>
